--- a/init.html
+++ b/init.html
@@ -91,6 +91,7 @@ h1,h2, ... h6 — заголовки<br>
 <br>
 Браузер при первом запросе к серверу получает html-документ. Находит в нём ссылки на стили, скрипты, картинки итп. И делает новые запросы. В итоге браузер склеивает всё в единую страницу.<br>
 </p>
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14031.319490178236!2d-96.76365006391576!3d32.95944581981671!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x47e5a5b74a5bfa82!2sWhite+House!5e0!3m2!1sen!2sus!4v1566491515833!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
         </style>
         <p style="color:rgb(255, 0, 0); size: 2em; border: 2px red solid;"> 
